Finish meal categories adapter implementation

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,6 @@
         android:id="@+id/fragment_meal_categories"
         android:name="jurkin.gctest.view.mealcategories.MealCategoriesFragment"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent" />
 
 </android.support.constraint.ConstraintLayout>
