--- a/app/src/main/res/layout/li_meal_category.xml
+++ b/app/src/main/res/layout/li_meal_category.xml
@@ -1,12 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="@dimen/expansion_panel_height"
+    android:orientation="horizontal"
+    android:clickable="true"
+    android:focusable="true"
+    android:gravity="center_vertical"
+    android:foreground="?attr/selectableItemBackground"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
         android:id="@+id/category_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:paddingStart="@dimen/space_default"
+        android:paddingEnd="@dimen/space_large"
+        android:gravity="center_vertical"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        tools:text="Category Name"/>
+
+    <ImageView
+        android:id="@+id/arrow_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="@dimen/space_default"
+        android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
 
 </LinearLayout>
