--- a/app/src/main/res/layout/activity_addon.xml
+++ b/app/src/main/res/layout/activity_addon.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="jurkin.gctest.MainActivity">
+    tools:context="jurkin.gctest.view.addons.AddOnActivity">
 
     <fragment
-        android:id="@+id/fragment_meal_categories"
-        android:name="jurkin.gctest.view.mealcategories.MealCategoriesFragment"
+        android:id="@+id/fragment_addon"
+        android:name="jurkin.gctest.view.addons.AddOnFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
