--- a/app/src/main/res/layout/fragment_addon.xml
+++ b/app/src/main/res/layout/fragment_addon.xml
@@ -5,6 +5,17 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/error_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:text="@string/error_empty_addons"
+        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
+        android:textAlignment="center"
+        android:padding="@dimen/space_large"
+        android:visibility="visible" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         xmlns:android="http://schemas.android.com/apk/res/android"
